# montionctrl

./: README.md
include/: Dmc1000.h
motorctrl/: CMakeLists.txt  axis.cpp  axis.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
